php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #29727 CUROPT_PROXYAUTH constant is not registered
Submitted: 2004-08-18 11:05 UTC Modified: 2004-08-19 13:21 UTC
Votes:2
Avg. Score:5.0 ± 0.0
Reproduced:2 of 2 (100.0%)
Same Version:1 (50.0%)
Same OS:1 (50.0%)
From: bip at pennec dot org Assigned:
Status: Closed Package: cURL related
PHP Version: 4.3.9RC1 OS: All
Private report: No CVE-ID: None
 [2004-08-18 11:05 UTC] bip at pennec dot org
Description:
------------
CURLOPT_PROXYAUTH constant appears in libcurl 7.10.7 but is not register in recents releases of the php_curl module.

This constant is needed to pass thru proxy with ntlm authentication

Reproduce code:
---------------
$ch = curl_init();

curl_setopt ($ch, CURLOPT_PROXYAUTH, CURLAUTH_NTLM);


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-08-18 19:08 UTC] bip at pennec dot org
This patch seems to works with libcurl 7.12.
The patch is applied against curl.c version of php 4.3.4

43,47d39
> /* As of curl 7.11.1 this is no longer defined inside curl.h */
> #ifndef HttpPost
> #define HttpPost curl_httppost
> #endif
>
197a198,210
> #if LIBCURL_VERSION_NUM >= 0x070a07 /* CURLOPT_HTTPAUTH is available since curl 7.10.6 */
>       REGISTER_CURL_CONSTANT(CURLOPT_PROXYAUTH);
>       REGISTER_CURL_CONSTANT(CURLOPT_HTTPAUTH);
>     /* http authentication options */
>     REGISTER_CURL_CONSTANT(CURLAUTH_BASIC);
>     REGISTER_CURL_CONSTANT(CURLAUTH_DIGEST);
>     REGISTER_CURL_CONSTANT(CURLAUTH_GSSNEGOTIATE);
>     REGISTER_CURL_CONSTANT(CURLAUTH_NTLM);
>     REGISTER_CURL_CONSTANT(CURLAUTH_ANY);
>     REGISTER_CURL_CONSTANT(CURLAUTH_ANYSAFE);
>
> #endif
>
715a729,732
> #if LIBCURL_VERSION_NUM >= 0x070a07
>               case CURLOPT_PROXYAUTH:
>               case CURLOPT_HTTPAUTH:
> #endif
 [2004-08-18 23:31 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 [2004-08-19 13:21 UTC] bip at pennec dot org
It's OK ! thankx ! It works fine on PHP5 :-) on windows and  linux too.
Interface.c exists on PHP5 but not on 4.3 series (there is only curl.c), is possible to update this series too ?
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 18:00:01 2026 UTC