MFH: Fixed bug #29727 (Added missing CURL authentication directives).